--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabs Page</title>
 
-    <link rel="stylesheet" type="text/css" href="estilos.css" />
+    <link rel="stylesheet" type="text/css" href="./src/styles.css" />
   </head>
   <body>
     <main class="main_container">
@@ -51,6 +51,6 @@
       </section>
     </main>
 
-    <script src="codigo.js"></script>
+    <script src="./src/script.ts"></script>
   </body>
 </html>
