feat: better code and tests added

--- a/index.html
+++ b/index.html
@@ -31,13 +31,22 @@
               <button
                 id="history"
                 class="tabs_container_text_buttons_button isActive"
+                aria-label="history button"
               >
                 History
               </button>
-              <button id="vision" class="tabs_container_text_buttons_button">
+              <button
+                id="vision"
+                class="tabs_container_text_buttons_button"
+                aria-label="vision button"
+              >
                 Vision
               </button>
-              <button id="goals" class="tabs_container_text_buttons_button">
+              <button
+                id="goals"
+                class="tabs_container_text_buttons_button"
+                aria-label="goals button"
+              >
                 Goals
               </button>
             </div>
@@ -51,6 +60,6 @@
       </section>
     </main>
 
-    <script src="./src/script.ts"></script>
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
