fix: better bem css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <main class="main-app">
-      <section class="content-wrapper">
-        <article class="header">
+      <section class="page-wrapper">
+        <article class="header-wrapper">
           <h1 class="header__title">About us</h1>
           <p class="header__description">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum,
@@ -32,21 +32,21 @@
             <div class="tabs-wrapper__list">
               <button
                 id="history"
-                class="tabs-wrapper__list-tab tabs-wrapper__list-tab--active"
+                class="tabs-wrapper__tab tabs-wrapper__tab--active"
                 aria-label="history button"
               >
                 History
               </button>
               <button
                 id="vision"
-                class="tabs-wrapper__list-tab"
+                class="tabs-wrapper__tab"
                 aria-label="vision button"
               >
                 Vision
               </button>
               <button
                 id="goals"
-                class="tabs-wrapper__list-tab"
+                class="tabs-wrapper__tab"
                 aria-label="goals button"
               >
                 Goals
