feat: Better ts configs - Better jest config - Npm Audit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Tabs Page</title>
+
+    <meta
+      name="description"
+      content="Explore different tabs with different information."
+    />
+    <meta name="keywords" content="Tabs, Tab" />
+    <meta name="author" content="Diego Libonati" />
+
+    <meta property="og:title" content="Tabs" />
+    <meta
+      property="og:description"
+      content="Explore different tabs with different information."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-site.com" />
+    <!-- <meta property="og:image" content="/logo192.png" /> -->
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tabs" />
+    <meta
+      name="twitter:description"
+      content="Explore different tabs with different information."
+    />
+    <!-- <meta name="twitter:image" content="/logo192.png" /> -->
+    <meta name="twitter:creator" content="@your-user" />
+
+    <!-- <link rel="apple-touch-icon" href="/logo192.png" /> -->
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
 
     <link rel="stylesheet" type="text/css" href="./src/index.css" />
     <link rel="stylesheet" type="text/css" href="./src/styles.css" />
